# d8q-intelligentengine-stockshark

./: .env.example  .gitignore  README.md  TEST_GUIDE.md  app.py  batch_4.txt  cli.py  config.py  crawl_data.py  database.py  prompt_loader.py  pyproject.toml  requirements.txt  run.py  test_akshare_data.py  test_stock_sectors.py  test_supply_chain_analyzer.py
.spec-workflow/specs/stock-analysis-system/: design.md  requirements.md  tasks.md
.spec-workflow/templates/: design-template.md  requirements-template.md  tasks-template.md
analysis/: search_engine.py  stock_analyzer.py
api/: api_server.py
api/routes/: analysis.py  search.py  supply_chain.py
backups/: stock_basic_info_20260101_102859.sql  stock_basic_info_20260103_103535.sql
data/: data_processor.py
docs/: evaluation_cache_design.md
migrations/: migrate.py
prompts/: prompts.yml
scripts/: test_api.sh  test_api_simple.sh
stockshark/: __init__.py  config.py  scheduler.py
stockshark/analysis/: __init__.py  evaluation_cache.py  llm_analyzer.py  search_engine.py  stock_analyzer.py  supply_chain_analyzer.py
stockshark/api/: __init__.py  app.py
stockshark/api/routes/: analysis.py  announcement.py  prompts.py  report.py  search.py  supply_chain.py
stockshark/data/: __init__.py  akshare_data.py  announcement.py  crawler.py  database.py  hibor_report.py  report_aggregator.py  research_report.py
stockshark/models/: stock_basic_info.py  stock_daily_trade.py
stockshark/services/: stock_service.py
stockshark/utils/: __init__.py  database.py  exceptions.py  logger.py  validators.py
stockshark/web/static/css/: style.css
stockshark/web/static/js/: app.js
stockshark/web/templates/: index.html
tests/fixtures/: __init__.py
tests/integration/: test_api.py
tests/unit/: test_akshare_data.py  test_supply_chain_analyzer.py
